--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "markdown-to-audio",
   "version": "1.0.0",
   "description": "Convert markdown files to audio using text-to-speech with Piper",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/server.js",
+    "dev": "node src/server.js"
   },
   "keywords": [
     "markdown",
@@ -14,8 +16,5 @@
     "piper"
   ],
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "marked": "^11.1.1"
-  }
+  "license": "MIT"
 }
