--- a/package.json
+++ b/package.json
@@ -6,18 +6,28 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "node src/server.js"
+    "format": "prettier . -w -u"
   },
   "keywords": [
-    "markdown",
+    "esm",
+    "nodejs",
+    "javascript",
     "audio",
     "tts",
     "text-to-speech",
-    "piper"
+    "piper",
+    "docker",
+    "rest-api",
+    "ffmpeg"
   ],
   "author": "Kasir Barati",
   "license": "MIT",
+  "engines": {
+    "node": "v24.13.0"
+  },
+  "packageManager": "pnpm@10.28.2",
   "devDependencies": {
-    "@types/node": "^25.3.0"
+    "@types/node": "^24.10.13",
+    "prettier": "^3.8.1"
   }
 }
