fix: semantic-release evaluate `${}` as a JS variable

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -70,7 +70,7 @@
     [
       "@semantic-release/exec",
       {
-        "publishCmd": "docker build -f Dockerfile -t ${DOCKERHUB_REPOSITORY}:${nextRelease.version} -t ${DOCKERHUB_REPOSITORY}:latest . && docker push ${DOCKERHUB_REPOSITORY}:${nextRelease.version} && docker push ${DOCKERHUB_REPOSITORY}:latest"
+        "publishCmd": "docker build -f Dockerfile -t $DOCKERHUB_REPOSITORY:${nextRelease.version} -t $DOCKERHUB_REPOSITORY:latest . && docker push $DOCKERHUB_REPOSITORY:${nextRelease.version} && docker push $DOCKERHUB_REPOSITORY:latest"
       }
     ],
     "@semantic-release/github"
