--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,18 +6,7 @@
       {
         "preset": "conventionalcommits",
         "releaseRules": [
-          {
-            "type": "feat",
-            "release": "minor"
-          },
-          {
-            "type": "fix",
-            "release": "patch"
-          },
-          {
-            "type": "perf",
-            "release": "patch"
-          },
+          { "breaking": true, "release": "major" },
           {
             "type": "docs",
             "release": false
@@ -51,22 +40,10 @@
     ],
     [
       "@semantic-release/release-notes-generator",
-      {
-        "preset": "conventionalcommits"
-      }
+      { "preset": "conventionalcommits" }
     ],
-    [
-      "@semantic-release/npm",
-      {
-        "npmPublish": false
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["package.json", "pnpm-lock.yaml"]
-      }
-    ],
+    ["@semantic-release/npm", { "npmPublish": false }],
+    ["@semantic-release/git", { "assets": ["package.json", "pnpm-lock.yaml"] }],
     [
       "@semantic-release/exec",
       {
